Some Issues has been resolved.
1. Canvas Responsiveness for my device device 365px handled.
2. Mobile Nav Logo has been updated
3. Menu Navbar has gained it's previous alignment
4. Product Section fully responsive
5. Brand logo alignment has been updated
6. Testimonial section has been updated but not responsive

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -155,7 +155,7 @@ canvas {
 }
 
 #nav-list {
-  margin-top: 115px;
+  margin-top: 95px;
   font-size: 1.2em;
   letter-spacing: 2px;
 }
@@ -240,6 +240,7 @@ canvas {
 #brandSection .row .column img{
   max-height: 140px;
   max-width: 200px;
+  margin: auto;
 }
 
 .sectionTitle { 
@@ -288,6 +289,7 @@ canvas {
   display: block;
   max-width: 500px;
   max-height: 500px;
+  margin: auto;
 
 }
 
@@ -351,9 +353,14 @@ canvas {
     /*font-size: 5vw;*/
   }
 
+#clientSection .container .carousel-inner h3{
+  margin-bottom: 20px;
+  /*background: #ABFFB7;*/
+}
 
-#clientSection .container .carousel-inner {
-  background: #ABFFB7;
+#clientSection .container .carousel-inner p{
+  margin-bottom: 80px;
+  /*background: #ABFFB7;*/
 }
 
 #clientSection .container #carousel_div .item{
@@ -361,14 +368,8 @@ canvas {
 }
 
 
-#clientSection .container #carousel_div .clientImage {
-    padding-bottom: 0px;
-    margin: auto;
-    clip-path: circle();
-}
 
 .carousel-caption {
-  
   color: #145629;
 }
 
@@ -516,7 +517,7 @@ canvas {
   }
   
   #productSection .container .row .productDetails{
-    padding:50px 30px;
+      padding: 115px 60px 0px;
   }
 
   #serviceSection .container .row {
@@ -589,8 +590,13 @@ canvas {
 
   #productSection .container .row .productDetails {
       
-      padding: 25px 25px 10px 20px;
+      padding: 95px 25px 10px 25px;
       
+  }
+
+  #productSection .container .row .productImage img {
+    max-width: 425px;
+    max-height: 425px;
   }
 
   #serviceSection .container .row .column h2 {
@@ -683,8 +689,13 @@ canvas {
 
   #productSection .container .row .productDetails {
       /* font-size: 1.7em; */
-      padding: 17px 25px 10px 18px;
+      padding: 55px 25px 10px 18px;
       /* text-align: justify; */
+  }
+
+  #productSection .container .row .productImage img {
+    max-width: 340px;
+    max-height: 340px;
   }
 
   #serviceSection .container .row {
@@ -940,6 +951,30 @@ canvas {
     /*letter-spacing: ;*/
   }
 
+
+  #logo-img-mobile{
+    background: url('../images/siteLogo/175x84.png') no-repeat;
+    height: 84px;
+    width: 175px;
+  }
+
+  #header-nav {
+    padding-top:13px; 
+  }
+  .navbar-header {
+    margin: 8px 0px;
+  }
+
+  .navbar-brand {
+    padding: 0px 15px 0px 20px;
+    height: 83px;
+  }
+
+   .navbar-toggle{
+    margin-right: 20px;
+  }
+
+
   .sectionTitle { 
     padding: 0px;
     margin: 70px 10px 35px 10px;  
@@ -1074,7 +1109,7 @@ canvas {
     font-size: 28px;
     margin-left: -130px;
     font-weight: bold;
-    letter-spacing: 3px;
+    letter-spacing: 3.2px;
   }
 
   #exploreSite {
